Fixed nav link colors and spacing issues, renamed homel.html

--- a/homepage.css
+++ b/homepage.css
@@ -1,44 +1,62 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+/*--Body--*/
+
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth; /*Smooth scrolling through web page*/
 }
 
 body {
   background-color: #eee;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
-  height: 1000px;
+  height: 1000px; /*Temporary*/
   position: relative;
   margin: 0;
 }
 
-header {
+/*--Header--*/
+
+header{
   background-color: #eee;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   overflow: hidden;
   position: fixed;
   width: 100%;
-  top: 0;
+  height: 60px;
+  top: 0; /*Ensures nav bar is at top*/
   z-index: 1;
-}
-
-nav{
-  margin: 20px 0 0 0;
 }
 
 nav ul {
   list-style: none;
   padding: 0;
+  margin: 20px 0;
 }
 
 nav li {
   display: inline;
-  padding: 15px;
   background-color: #eee;
 }
 
+nav a {
+  color: #1c1c1c;
+  font-size: large;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  text-decoration: none;
+  padding: 15px;
+
+}
+
+a:hover {
+  color: #eee;
+  background-color: rgba(9,157,185,1);
+}
+
+/*--Main--*/
+
 h1 {
   text-align: center;
-  margin-top: 80px;/* Yo is this Janky?*/
+  padding-top: 50px;/* Yo is this Janky?*/
 }
